--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/head', {title: "Home"}); %>
 <body class="d-flex flex-column h-100">
     <%- include('partials/header') %>
-    <main>
+    <main class="container vh-100">
         <div class="container"></div>
             <h2 class="text-center mb-5">Featured Products</h2>
             <div class="row">
-                <div class="col-md-4 mb-4">
+                <div class="col-4 mb-4">
                     <div class="card">
                         <img src="/api/placeholder/400/300" class="card-img-top" alt="Product 1">
                         <div class="card-body">
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
+                <div class="col-4 mb-4">
                     <div class="card">
                         <img src="/api/placeholder/400/300" class="card-img-top" alt="Product 2">
                         <div class="card-body">
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
+                <div class="col-4 mb-4">
                     <div class="card">
                         <img src="/api/placeholder/400/300" class="card-img-top" alt="Product 3">
                         <div class="card-body">
