--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
     </ul>
 
     <div class="text-end">
-        <button type="button" class="btn btn-outline-primary me-2">Login</button>
-        <button type="button" class="btn btn-primary">Sign-up</button>
+        <a class="btn btn-outline-primary me-2" href="/login" role="button">Login</a>
+        <a class="btn btn-primary me-2" href="/signup" role="button">Sign Up</a>
     </div>
 </header>
