--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,49 +1,13 @@
 <%- include('partials/head', {title: "Home"}); %>
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column vh-100">
     <%- include('partials/header') %>
-    <main class="container vh-100">
-        <div class="container"></div>
-            <h2 class="text-center mb-5">Featured Products</h2>
-            <div class="row">
-                <div class="col-4 mb-4">
-                    <div class="card">
-                        <img src="/api/placeholder/400/300" class="card-img-top" alt="Product 1">
-                        <div class="card-body">
-                            <h5 class="card-title">Product 1</h5>
-                            <p class="card-text">A brief description of Product 1.</p>
-                            <a href="#" class="btn btn-outline-primary">View Details</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 mb-4">
-                    <div class="card">
-                        <img src="/api/placeholder/400/300" class="card-img-top" alt="Product 2">
-                        <div class="card-body">
-                            <h5 class="card-title">Product 2</h5>
-                            <p class="card-text">A brief description of Product 2.</p>
-                            <a href="#" class="btn btn-outline-primary">View Details</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 mb-4">
-                    <div class="card">
-                        <img src="/api/placeholder/400/300" class="card-img-top" alt="Product 3">
-                        <div class="card-body">
-                            <h5 class="card-title">Product 3</h5>
-                            <p class="card-text">A brief description of Product 3.</p>
-                            <a href="#" class="btn btn-outline-primary">View Details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <main class="container vh-75">
+        <h2 class="text-center mb-5">Books</h2>
+        <input type="text" id="search-bar" class="p-2 m-3" placeholder="Search for book/author">
+        <div class="container d-flex flex-wrap books-continer">  
         </div>
     </main>
-    
     <%- include('partials/footer') %>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"
-    ></script>
+    <%- include('partials/scripts', {page: "home"}); %>
 </body>
 </html>
