--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,12 +7,12 @@
                 <h3 class="p-5 text-center">Sign In</h3>
                 <form class="text-center">
                     <div class="form-group">
-                        <label class="me-3" for="Email">Email</label><br>
+                        <label id="email-input" class="me-3" for="Email">Email</label><br>
                         <input class="input" type="email" name="email" placeholder="Email" id="email-input">
                     </div>
                     <div class="form-group">
-                        <label class="me-3 username" for="password">Password</label><br>
-                        <input class="input password" type="password" name="password" placeholder="Password" id="password-input">
+                        <label class="me-3" for="password">Password</label><br>
+                        <input id="email-input" class="input password" type="password" name="password" placeholder="Password" id="password-input">
                     </div>
                     <div class="p-1">
                         <button class="btn btn-outline-primary login-btn" type="button">Login</button>
