--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
         <li><a href="/orders" class="nav-link px-2 link-dark">Orders</a></li>
     </ul>
 
-    <div class="text-end">
+    <div class="navbar-login text-end">
         <a class="btn btn-outline-primary me-2" href="/login" role="button">Login</a>
         <a class="btn btn-primary me-2" href="/signup" role="button">Sign Up</a>
     </div>
