--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -5,3 +5,4 @@
 		integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 		crossorigin="anonymous"></script>
 <script src="js/<%= page %>.js"></script>
+<script src="js/navbar.js"></script>
