--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,12 +7,20 @@
                 <h3 class="p-5 text-center">Sign Up</h3>
                 <form class="text-center signup-form">
                     <div class="form-group">
+                        <label class="me-3" for="Email">Username</label><br>
+                        <input class="input" type="text" name="username" placeholder="Email" id="username-input">
+                    </div>
+                    <div class="form-group">
                         <label class="me-3" for="Email">Email</label><br>
                         <input class="input" type="email" name="email" placeholder="Email" id="email-input">
                     </div>
                     <div class="form-group">
-                        <label class="me-3 username" for="password">Password</label><br>
-                        <input class="input password" type="password" name="password" placeholder="Password" id="password-input">
+                        <label class="me-3" for="password">Password</label><br>
+                        <input class="input" type="password" name="password" placeholder="Password" id="password-input">
+                    </div>
+                    <div class="form-group">
+                        <label class="me-3" for="password">Validate Password</label><br>
+                        <input class="input" type="password" name="validate-password" placeholder="Password" id="validate-password-input">
                     </div>
                     <div class="p-1">
                         <button class="btn btn-outline-primary signup-btn" type="submit">Sign Up</button>
@@ -31,5 +39,6 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"
     ></script>
+    <%- include('partials/scripts', {page: "signup"}); %>
 </body>
 </html>
