--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,17 +5,17 @@
         <div class="container login-container d-flex justify-content-center">
             <div>
                 <h3 class="p-5 text-center">Sign In</h3>
-                <form class="text-center">
+                <form class="login-form text-center">
                     <div class="form-group">
-                        <label id="email-input" class="me-3" for="Email">Email</label><br>
-                        <input class="input" type="email" name="email" placeholder="Email" id="email-input">
+                        <label class="me-3" for="Email">Email</label><br>
+                        <input id="email-input" class="input" type="email" name="email" placeholder="Email">
                     </div>
                     <div class="form-group">
                         <label class="me-3" for="password">Password</label><br>
-                        <input id="email-input" class="input password" type="password" name="password" placeholder="Password" id="password-input">
+                        <input id="password-input" class="input password" type="password" name="password" placeholder="Password" id="password-input">
                     </div>
                     <div class="p-1">
-                        <button class="btn btn-outline-primary login-btn" type="button">Login</button>
+                        <button class="btn btn-outline-primary login-btn" type="submit">Login</button>
                     </div>
                     <div>Don't have an acount yet? <a href="signup">Sign up</a></div>
                 </form>
@@ -25,6 +25,7 @@
             </div>
         </div>
     </main>
+    <%- include('partials/modal') %>
     <%- include('partials/footer') %>
     <%- include('partials/scripts', {page: "login"}); %>
 </body>
