--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -13,5 +13,5 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="http://localhost:3000/styles.css">
     </head>
