--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -4,5 +4,5 @@
 <script src="https://code.jquery.com/jquery-3.7.1.js"
 		integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
 		crossorigin="anonymous"></script>
-<script src="js/<%= page %>.js"></script>
-<script src="js/navbar.js"></script>
+<script src="http://localhost:3000/js/<%= page %>.js"></script>
+<script src="http://localhost:3000/js/navbar.js"></script>
