--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,8 +7,8 @@
                 <h3 class="p-5 text-center">Sign Up</h3>
                 <form class="text-center signup-form">
                     <div class="form-group">
-                        <label class="me-3" for="Email">Username</label><br>
-                        <input class="input" type="text" name="username" placeholder="Email" id="username-input">
+                        <label class="me-3" for="username">Username</label><br>
+                        <input class="input" type="text" name="username" placeholder="username" id="username-input">
                     </div>
                     <div class="form-group">
                         <label class="me-3" for="Email">Email</label><br>
@@ -33,6 +33,7 @@
             </div>
         </div>
     </main>
+    <%- include('partials/modal') %>
     <%- include('partials/footer') %>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
