Add admin + book search filters

--- a/views/book.ejs
+++ b/views/book.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head', {title: "Home"}); %>
+<%- include('partials/head', {title: "Book"}); %>
 <body class="d-flex flex-column vh-100">
     <%- include('partials/header') %>
     <main class="container vh-75">
