--- a/public/styles.css
+++ b/public/styles.css
@@ -34,3 +34,87 @@
 .login-btn {
     width: 100px;
 }
+
+.cart-item {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ccc;
+}
+
+.cart-item img {
+  max-width: 100px;
+  border-radius: 10px;
+}
+
+.cart-item .d-flex {
+  align-items: center;
+}
+
+.cart-item h5 {
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.cart-item p {
+  margin-bottom: 0;
+}
+
+.cart-item .text-success {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.remove-item-btn {
+  margin-left: 15px;
+}
+
+.cart-summary {
+  margin-top: 30px;
+  text-align: right;
+}
+
+.btn-outline-danger {
+  border-color: #dc3545;
+}
+
+.btn-outline-danger i {
+  margin-right: 5px;
+}
+
+.checkout-container {
+  max-width: 600px;
+  margin: 50px auto;
+  background-color: #fff;
+  padding: 30px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.checkout-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.form-control {
+  margin-bottom: 20px;
+}
+
+.payment-method {
+  margin-top: 20px;
+}
+
+.credit-card-details {
+  display: none;
+}
+
+.btn-success {
+  background-color: #28a745;
+  border-color: #28a745;
+  font-size: 1.25rem;
+  padding: 10px 20px;
+}
+
+.btn-success:hover {
+  background-color: #218838;
+  border-color: #1e7e34;
+}
