--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
         <li><a href="/home" class="nav-link px-2 link-dark">Home</a></li>
         <li><a href="/catalog" class="nav-link px-2 link-dark">Catalog</a></li>
         <li><a href="/orders" class="nav-link px-2 link-dark">Orders</a></li>
+        <li><a href="/cart" class="nav-link px-2 link-dark">Cart</a></li>
     </ul>
 
     <div class="navbar-login text-end">
