Add admin panels

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,10 @@
           Admin Pages
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="admin/orders">Manage Orders</a></li>
-          <li><a class="dropdown-item" href="admin/users">Manage Users</a></li>
-          <li><a class="dropdown-item" href="admin/books">Manage Books</a></li>
+          <li><a class="dropdown-item" href="/admin/orders">Manage Orders</a></li>
+          <li><a class="dropdown-item" href="/admin/users">Manage Users</a></li>
+          <li><a class="dropdown-item" href="/admin/books">Manage Books</a></li>
+          <li><a class="dropdown-item" href="/admin/statistics">View Statistics</a></li>
         </ul>
       </div>
     <div class="navbar-login text-end d-none">
