--- a/views/partials/modal.ejs
+++ b/views/partials/modal.ejs
@@ -1,4 +1,4 @@
-<div id="messageModal" class="modal fade" tabindex="-1" role="dialog">
+<!-- <div id="messageModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -7,9 +7,8 @@
           type="button"
           class="close"
           data-dismiss="modal"
-          aria-label="Close"
         >
-          <span aria-hidden="true">&times;</span>
+          <span>&times;</span>
         </button>
       </div>
       <div class="modal-body">
@@ -22,4 +21,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
