--- a/views/usersPage.ejs
+++ b/views/usersPage.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head', {title: "Book"}); %>
+<%- include('partials/head', {title: "Users"}); %>
 <body class="d-flex flex-column vh-100">
     <%- include('partials/header') %>
     <main class="container vh-75 justify-content-center text-center">
