Fix navbar logout

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
             </div>
         </div>
         <input type="text" id="search-bar" class="p-2 m-3" placeholder="Search for book/author">
-        <div class="container d-flex flex-wrap books-continer">  
+        <div class="container d-flex flex-wrap books-container">  
         </div>
     </main>
     <%- include('partials/footer') %>
