fix books table class name

--- a/views/booksPage.ejs
+++ b/views/booksPage.ejs
@@ -6,7 +6,7 @@
         <div class="col-3">
             <input type="text" id="search-input" placeholder="Search books..." class="form-control mb-3">
         </div>
-        <table class="table users-table">
+        <table class="table books-table">
             <thead class="table-dark">
               <tr>
               </tr>
