--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,8 @@
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/home" class="nav-link px-2 link-dark">Home</a></li>
-        <li><a href="/catalog" class="nav-link px-2 link-dark">Catalog</a></li>
+        <li><a href="/orders" class="nav-link px-2 link-dark">Orders</a></li>
+        <li><a href="/stores" class="nav-link px-2 link-dark">Stores</a></li>
         <li><a href="/cart" class="nav-link px-2 link-dark">Cart</a></li>
     </ul>
 
