Add branches and statistics

--- a/views/book.ejs
+++ b/views/book.ejs
@@ -17,7 +17,7 @@
                             <p id="bookPages"></p>
                             <p id="bookPrice" class="fs-4 fw-bold text-primary"></p>
                         </div>
-                        <button id="add-to-cart" class="btn btn-primary">Add to cart</a>
+                        <button id="add-to-cart" class="btn btn-primary add-to-cart-btn">Add to cart</a>
                     </div>
                 </div>
             </div>
