--- a/public/styles.css
+++ b/public/styles.css
@@ -107,14 +107,38 @@
   display: none;
 }
 
-.btn-success {
+#checkout-btn {
   background-color: #28a745;
   border-color: #28a745;
   font-size: 1.25rem;
   padding: 10px 20px;
 }
 
-.btn-success:hover {
+#checkout-btn:hover {
   background-color: #218838;
   border-color: #1e7e34;
+}
+
+.bar {
+  fill: steelblue;
+}
+.bar:hover {
+  fill: orange;
+}
+.axis-label {
+  font-size: 12px;
+}
+svg {
+  font-family: Arial, sans-serif;
+}
+
+.tooltip {
+  position: absolute;
+  text-align: center; 
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
 }
