--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -14,5 +14,6 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <script src="https://d3js.org/d3.v7.min.js"></script>
         <link rel="stylesheet" href="http://localhost:3000/styles.css">
     </head>
