--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/home" class="nav-link px-2 link-dark">Home</a></li>
         <li><a href="/orders" class="nav-link px-2 link-dark">Orders</a></li>
-        <li><a href="/stores" class="nav-link px-2 link-dark">Stores</a></li>
+        <li><a href="/map" class="nav-link px-2 link-dark">Stores</a></li>
         <li><a href="/cart" class="nav-link px-2 link-dark">Cart</a></li>
     </ul>
 
@@ -15,6 +15,7 @@
             <li><a class="dropdown-item" href="/admin/orders">Manage Orders</a></li>
             <li><a class="dropdown-item" href="/admin/users">Manage Users</a></li>
             <li><a class="dropdown-item" href="/admin/books">Manage Books</a></li>
+            <li><a class="dropdown-item" href="/admin/branches">Manage Branches</a></li>
             <li><a class="dropdown-item" href="/admin/statistics">View Statistics</a></li>
           </ul>
       </div>
