--- a/views/statistics.ejs
+++ b/views/statistics.ejs
@@ -1,9 +1,11 @@
 <%- include('partials/head', {title: "Statistics"}); %>
 <body class="d-flex flex-column vh-100">
     <%- include('partials/header') %>
-    <main class="container vh-75 flex">
+    <main class="container-fluid vh-75 flex ">
         <h5 class="text-center">Statistics Panel</h5>
         <div class="d-flex">
+            <svg class="orders-per-month flex-grow-1" width="800" height="800"></svg>
+            <svg class="sales-per-book flex-grow-1" width="800" height="800"></svg>
         </div>
     </main>
     <%- include('partials/footer') %>
