--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
       <a href="/" class="mb-3 me-2 mb-md-0 text-dark text-decoration-none lh-1">
         <svg class="bi" width="30" height="24" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
       </a>
-      <span class="mb-3 mb-md-0 text-muted">&copy; 2023 Company, Inc</span>
+      <span class="mb-3 mb-md-0 text-muted">&copy; Bookstore Inc</span>
     </div>
   
     <ul class="nav col-md-4 justify-content-center list-unstyled d-flex">
