--- a/frontend/views/map.ejs
+++ b/frontend/views/map.ejs
@@ -9,7 +9,6 @@
     <h1>Our Store Locations with Weather</h1>
     <div id="google_map" style="height: 500px; width: 100%;"></div>
 
-    <!-- Load Google Maps API -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= googleMapKey %>&callback=initMap"></script>
 
     <script>
@@ -17,7 +16,7 @@
 
         function initMap() {
             const map = new google.maps.Map(document.getElementById("google_map"), {
-                center: { lat: 32.0853, lng: 34.7818 }, // Centered on Tel Aviv, Israel
+                center: { lat: 32.0853, lng: 34.7818 }, 
                 zoom: 8
             });
 
@@ -27,16 +26,13 @@
                     lng: parseFloat(store.address.longitude)
                 };
 
-                // Fetch the weather for the store location
                 fetchWeatherData(position.lat, position.lng).then(weather => {
-                    // Create a marker for each store
                     const marker = new google.maps.Marker({
                         position: position,
                         map: map,
                         title: `${store.name} - ${weather}°C`
                     });
 
-                    // Display the store name and weather in an info window
                     const infoWindow = new google.maps.InfoWindow({
                         content: `<h4>${store.name}</h4><p>Temperature: ${weather}°C</p>`
                     });
@@ -51,13 +47,11 @@
         }
 
         async function fetchWeatherData(lat, lng) {
-            const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?lon=12.00&lat=12.22&appid=25118ce2a8f92206d7d85a52bca0cc4b&units=metric`, {
+            const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lng}&appid=25118ce2a8f92206d7d85a52bca0cc4b&units=metric`, {
                 method: 'GET',
             });
             const data = await response.json();
-            console.log(data.weather.main)
-            // Modify according to API response structure to get temperature
-            return data.weather.main;
+            return data.weather[0].main;
         }
     </script>
 </body>
