Change to weather

--- a/frontend/views/map.ejs
+++ b/frontend/views/map.ejs
@@ -35,7 +35,7 @@
                     });
 
                     const infoWindow = new google.maps.InfoWindow({
-                        content: `<h4>${store.name}</h4><p>Temperature: ${weather}</p>`
+                        content: `<h4>${store.name}</h4><p>Weather: ${weather}</p>`
                     });
 
                     marker.addListener("click", function() {
